--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,10 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dao</artifactId>
+    <artifactId>common</artifactId>
     <packaging>jar</packaging>
 
-    <name>dao</name>
+    <name>common</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -19,18 +19,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.tjlcast</groupId>
-            <artifactId>common</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.tjlcast</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
