--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <modules>
     <module>application</module>
     <module>dao</module>
+      <module>common</module>
   </modules>
 
   <name>noodles</name>
